# gestion-datos

./: .gitignore  README.md  docker-compose.yml  eda.ipynb  entrega.ipynb
jupyter/: eda.ipynb  entrega.ipynb
recomendacion_canciones/: README.md  pyproject.toml
recomendacion_canciones/recomendacion_canciones/: base_config.py  db_models.py  front.py  gradio_run.py  main.py  models.py  rec_model.py  rest.py  song_rec.py  wrapper.py
recomendacion_canciones/recomendacion_canciones/templates/: index.html
