[tool.poetry]
name = "recomendacion-canciones"
version = "0.1.0"
description = ""
authors = ["Dhasane <danihas@live.com>"]
readme = "README.md"
packages = [{include = "recomendacion_canciones"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
pandas = "^1.5.3"
joblib = "^1.2.0"
jinja2 = "^3.1.2"
uvicorn = "^0.21.1"
annoy = "^1.17.1"
sqlalchemy = "^2.0.7"
psycopg2 = "^2.9.5"
gradio = "^3.24.1"

[tool.poetry.scripts]
start = "recomendacion_canciones.wrapper:start"
gradio = "recomendacion_canciones.gradio_run:GradioRun"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
